# Taller

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: pigment.h  pigment_number.h  print_screen.h
src/: pigment.cpp  pigment_number.cpp  print_screen.cpp
test/: main.cpp
test/include/: pretty_print.h  test_pigment.h
test/src/: pretty_print.cpp  test_pigment.cpp
